MainFreight_PartialSandbox/src/objects/Shipping_Location__c.object
<CustomObject>
    <description>Provides many to many relationship with Account.

1. An Account may have multiple Shipping Locations.
2. A Shipping Location may have an association with multiple Accounts.</description>
    <fields>
        <fullName>Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Shipping Location may have an association with an Account.</inlineHelpText>
        <label>Account Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipping Locations</relationshipLabel>
        <relationshipName>ShippingLocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Define if the Shipping Location association is Active. The field is checked by default.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Location_Account_Address__c</fullName>
        <formula>Shipping_Locations_Account__r.ShippingStreet + 
IF( ISBLANK( Shipping_Locations_Account__r.ShippingStreet ) || ISBLANK( Shipping_Locations_Account__r.ShippingCity ), &apos; &apos;, &apos;,&apos; ) +

Shipping_Locations_Account__r.ShippingCity + 
IF( ISBLANK( Shipping_Locations_Account__r.ShippingCity ) || ISBLANK( Shipping_Locations_Account__r.ShippingState ), &apos; &apos;, &apos;,&apos; ) +

Shipping_Locations_Account__r.ShippingState + 
IF( ISBLANK( Shipping_Locations_Account__r.ShippingState ) || ISBLANK( Shipping_Locations_Account__r.ShippingCountry ), &apos; &apos;, &apos;,&apos; ) + 

Shipping_Locations_Account__r.ShippingCountry + 
IF( ISBLANK( Shipping_Locations_Account__r.ShippingCountry ) || ISBLANK( Shipping_Locations_Account__r.ShippingPostalCode ), &apos; &apos;, &apos;,&apos; ) + 

Shipping_Locations_Account__r.ShippingPostalCode</formula>
        <label>Shipping Location Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Locations_Account__c</fullName>
        <inlineHelpText>Every shipping location must have a parent account.</inlineHelpText>
        <label>Shipping Locations</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipping Locations (Lookup)</relationshipLabel>
        <relationshipName>ShippingLocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Shipping Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Shipping_Locations_Account__c</columns>
        <columns>Account_Lookup__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Shipping Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Not_Allowed_For_Non_Admin_Users</fullName>
        <active>true</active>
        <errorConditionFormula>LastModifiedBy.IsActive</errorConditionFormula>
        <errorMessage>Sorry, You are not authorized to create this record</errorMessage>
    </validationRules>
</CustomObject>